# generic_media_frontend

./: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
src/: .editorconfig  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AuthenticatedImage.vue  AuthenticatedVideo.vue  RainbowAvatar.vue
src/components/pages/: EditProfile.vue  Explorer.vue  Friends.vue  ImageVideoGridChild.vue  Login.vue  Profile.vue
src/components/pages/checklist/: CheckList.vue  EntryElement.vue
src/models/: List.ts  User.ts  UserProfile.ts
src/services/: Service.ts
src/utils/: Constants.ts
